CurrentActions/src/objects/Insight__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Insights1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assoc2ID__c</fullName>
        <label>Assoc2ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assoc3ID__c</fullName>
        <label>Assoc3ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssocID__c</fullName>
        <label>AssocID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssocLabel2__c</fullName>
        <label>AssocLabel2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssocLabel3__c</fullName>
        <label>AssocLabel3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssocLabel__c</fullName>
        <label>AssocLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssocTypeName2__c</fullName>
        <label>AssocTypeName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssocTypeName3__c</fullName>
        <label>AssocTypeName3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssocTypeName__c</fullName>
        <label>AssocTypeName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chart__c</fullName>
        <label>Chart</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Label__c</fullName>
        <label>Child Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_Type__c</fullName>
        <label>Child Type</label>
        <picklist>
            <picklistValues>
                <fullName>all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>leaf</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Source_Icon_URL__c</fullName>
        <label>Data Source Icon URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <description>The data source searched by the campaign runner</description>
        <label>Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Name__c</fullName>
        <label>Detail Name</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Field_Labels__c</fullName>
        <label>Field Labels</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Value__c</fullName>
        <formula>(Pre_Value__c - 1)  *  Today_Changed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_Changed__c</fullName>
        <label>History Changed</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>History_Deleted__c</fullName>
        <label>History Deleted</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>History_Labels__c</fullName>
        <label>History Labels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>History_New__c</fullName>
        <label>History New</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>History_Total__c</fullName>
        <label>History Total</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_Name__c</fullName>
        <label>Long Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Label__c</fullName>
        <label>Parent Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Type__c</fullName>
        <label>Parent Type</label>
        <picklist>
            <picklistValues>
                <fullName>none</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>subgroup</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parents__c</fullName>
        <label>Parents</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <externalId>true</externalId>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Post_Value__c</fullName>
        <label>Post Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Value__c</fullName>
        <label>Pre Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related__c</fullName>
        <label>Related</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReportID__c</fullName>
        <label>ReportID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type_Label__c</fullName>
        <label>Report Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Data__c</fullName>
        <label>S3 Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Count__c</fullName>
        <label>SObject Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sparkline__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=0156100000179nI&quot;, &quot;Sparkline&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sparkline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Table_Data__c</fullName>
        <label>Table_Data</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Today_Changed__c</fullName>
        <label>Today Changed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Deleted__c</fullName>
        <label>Today Deleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_New__c</fullName>
        <label>Today New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Total__c</fullName>
        <label>Today Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Updated__c</fullName>
        <formula>Today_Changed__c +  Today_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Label__c</fullName>
        <label>Value Label</label>
        <type>TextArea</type>
    </fields>
    <label>Insight</label>
    <listViews>
        <fullName>MF_Test_View</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>MF Test View</label>
    </listViews>
    <listViews>
        <fullName>New_Today</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Data_Source__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>SAP</fullName>
        <columns>NAME</columns>
        <columns>Data_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Source__c</field>
            <operation>equals</operation>
            <value>SAP</value>
        </filters>
        <label>SAP</label>
    </listViews>
    <listViews>
        <fullName>assigned_to_me_today</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Details__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Assigned to Me Today</label>
    </listViews>
    <listViews>
        <fullName>long_name_all</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Sparkline__c</columns>
        <columns>Data_Source__c</columns>
        <columns>Long_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Parents__c</columns>
        <filterScope>Everything</filterScope>
        <label>long_name_all</label>
    </listViews>
    <nameField>
        <label>Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>